loadUserByUsername implementation in AuthorizationService.java